--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   "author": "Dennis#4064",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "socket.io": "^4.4.0",
-    "socket.io-client": "^4.4.0"
+    "socket.io-client": "^4.4.0",
+    "typescript": "^4.5.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "eslint": "^8.5.0"
   }
 }
