--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "dotenv": "^10.0.0",
+    "inquirer": "^8.2.0",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
+    "@types/inquirer": "^8.2.0",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "eslint": "^8.5.0"
